--- a/Project ML Analysis.ipynb
+++ b/Project ML Analysis.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "ya1E3uy441Xc"
       },
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -75,386 +75,15 @@
       },
       "outputs": [
         {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_3552\\1511457526.py:3: DtypeWarning: Columns (1,3,47) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-            "  df = pd.read_csv(r'D:\\Users\\sathi\\Downloads\\UNSW-NB15_1.csv', names=headers)\n"
+          "ename": "NameError",
+          "evalue": "name 'pd' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "Input \u001b[1;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m dfc \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124msathi\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDownloads\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mNUSW-NB15_features.csv\u001b[39m\u001b[38;5;124m'\u001b[39m,encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcp1252\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      2\u001b[0m headers \u001b[38;5;241m=\u001b[39m dfc\u001b[38;5;241m.\u001b[39mName\n\u001b[0;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUsers\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124msathi\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mDownloads\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mUNSW-NB15_1.csv\u001b[39m\u001b[38;5;124m'\u001b[39m, names\u001b[38;5;241m=\u001b[39mheaders)\n",
+            "\u001b[1;31mNameError\u001b[0m: name 'pd' is not defined"
           ]
-        },
-        {
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>srcip</th>\n",
-              "      <th>sport</th>\n",
-              "      <th>dstip</th>\n",
-              "      <th>dsport</th>\n",
-              "      <th>proto</th>\n",
-              "      <th>state</th>\n",
-              "      <th>dur</th>\n",
-              "      <th>sbytes</th>\n",
-              "      <th>dbytes</th>\n",
-              "      <th>sttl</th>\n",
-              "      <th>...</th>\n",
-              "      <th>ct_ftp_cmd</th>\n",
-              "      <th>ct_srv_src</th>\n",
-              "      <th>ct_srv_dst</th>\n",
-              "      <th>ct_dst_ltm</th>\n",
-              "      <th>ct_src_ ltm</th>\n",
-              "      <th>ct_src_dport_ltm</th>\n",
-              "      <th>ct_dst_sport_ltm</th>\n",
-              "      <th>ct_dst_src_ltm</th>\n",
-              "      <th>attack_cat</th>\n",
-              "      <th>Label</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>59.166.0.0</td>\n",
-              "      <td>1390</td>\n",
-              "      <td>149.171.126.6</td>\n",
-              "      <td>53</td>\n",
-              "      <td>udp</td>\n",
-              "      <td>CON</td>\n",
-              "      <td>0.001055</td>\n",
-              "      <td>132</td>\n",
-              "      <td>164</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>3</td>\n",
-              "      <td>7</td>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>59.166.0.0</td>\n",
-              "      <td>33661</td>\n",
-              "      <td>149.171.126.9</td>\n",
-              "      <td>1024</td>\n",
-              "      <td>udp</td>\n",
-              "      <td>CON</td>\n",
-              "      <td>0.036133</td>\n",
-              "      <td>528</td>\n",
-              "      <td>304</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>2</td>\n",
-              "      <td>4</td>\n",
-              "      <td>2</td>\n",
-              "      <td>3</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>59.166.0.6</td>\n",
-              "      <td>1464</td>\n",
-              "      <td>149.171.126.7</td>\n",
-              "      <td>53</td>\n",
-              "      <td>udp</td>\n",
-              "      <td>CON</td>\n",
-              "      <td>0.001119</td>\n",
-              "      <td>146</td>\n",
-              "      <td>178</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>12</td>\n",
-              "      <td>8</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>59.166.0.5</td>\n",
-              "      <td>3593</td>\n",
-              "      <td>149.171.126.5</td>\n",
-              "      <td>53</td>\n",
-              "      <td>udp</td>\n",
-              "      <td>CON</td>\n",
-              "      <td>0.001209</td>\n",
-              "      <td>132</td>\n",
-              "      <td>164</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>6</td>\n",
-              "      <td>9</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>59.166.0.3</td>\n",
-              "      <td>49664</td>\n",
-              "      <td>149.171.126.0</td>\n",
-              "      <td>53</td>\n",
-              "      <td>udp</td>\n",
-              "      <td>CON</td>\n",
-              "      <td>0.001169</td>\n",
-              "      <td>146</td>\n",
-              "      <td>178</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>7</td>\n",
-              "      <td>9</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>699996</th>\n",
-              "      <td>59.166.0.8</td>\n",
-              "      <td>12520</td>\n",
-              "      <td>149.171.126.6</td>\n",
-              "      <td>31010</td>\n",
-              "      <td>tcp</td>\n",
-              "      <td>FIN</td>\n",
-              "      <td>0.020383</td>\n",
-              "      <td>320</td>\n",
-              "      <td>1874</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>8</td>\n",
-              "      <td>20</td>\n",
-              "      <td>7</td>\n",
-              "      <td>5</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>4</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>699997</th>\n",
-              "      <td>59.166.0.0</td>\n",
-              "      <td>18895</td>\n",
-              "      <td>149.171.126.9</td>\n",
-              "      <td>80</td>\n",
-              "      <td>tcp</td>\n",
-              "      <td>FIN</td>\n",
-              "      <td>1.402957</td>\n",
-              "      <td>19410</td>\n",
-              "      <td>1087890</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>7</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>2</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>699998</th>\n",
-              "      <td>59.166.0.0</td>\n",
-              "      <td>30103</td>\n",
-              "      <td>149.171.126.5</td>\n",
-              "      <td>5190</td>\n",
-              "      <td>tcp</td>\n",
-              "      <td>FIN</td>\n",
-              "      <td>0.007108</td>\n",
-              "      <td>2158</td>\n",
-              "      <td>2464</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>13</td>\n",
-              "      <td>13</td>\n",
-              "      <td>6</td>\n",
-              "      <td>7</td>\n",
-              "      <td>2</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>699999</th>\n",
-              "      <td>59.166.0.6</td>\n",
-              "      <td>30388</td>\n",
-              "      <td>149.171.126.5</td>\n",
-              "      <td>111</td>\n",
-              "      <td>udp</td>\n",
-              "      <td>CON</td>\n",
-              "      <td>0.004435</td>\n",
-              "      <td>568</td>\n",
-              "      <td>304</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>10</td>\n",
-              "      <td>13</td>\n",
-              "      <td>6</td>\n",
-              "      <td>5</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>3</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>700000</th>\n",
-              "      <td>59.166.0.0</td>\n",
-              "      <td>6055</td>\n",
-              "      <td>149.171.126.5</td>\n",
-              "      <td>54145</td>\n",
-              "      <td>tcp</td>\n",
-              "      <td>FIN</td>\n",
-              "      <td>0.072974</td>\n",
-              "      <td>4238</td>\n",
-              "      <td>60788</td>\n",
-              "      <td>31</td>\n",
-              "      <td>...</td>\n",
-              "      <td>0</td>\n",
-              "      <td>13</td>\n",
-              "      <td>13</td>\n",
-              "      <td>6</td>\n",
-              "      <td>7</td>\n",
-              "      <td>1</td>\n",
-              "      <td>1</td>\n",
-              "      <td>2</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>0</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>700001 rows × 49 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "             srcip  sport          dstip dsport proto state       dur  sbytes  \\\n",
-              "0       59.166.0.0   1390  149.171.126.6     53   udp   CON  0.001055     132   \n",
-              "1       59.166.0.0  33661  149.171.126.9   1024   udp   CON  0.036133     528   \n",
-              "2       59.166.0.6   1464  149.171.126.7     53   udp   CON  0.001119     146   \n",
-              "3       59.166.0.5   3593  149.171.126.5     53   udp   CON  0.001209     132   \n",
-              "4       59.166.0.3  49664  149.171.126.0     53   udp   CON  0.001169     146   \n",
-              "...            ...    ...            ...    ...   ...   ...       ...     ...   \n",
-              "699996  59.166.0.8  12520  149.171.126.6  31010   tcp   FIN  0.020383     320   \n",
-              "699997  59.166.0.0  18895  149.171.126.9     80   tcp   FIN  1.402957   19410   \n",
-              "699998  59.166.0.0  30103  149.171.126.5   5190   tcp   FIN  0.007108    2158   \n",
-              "699999  59.166.0.6  30388  149.171.126.5    111   udp   CON  0.004435     568   \n",
-              "700000  59.166.0.0   6055  149.171.126.5  54145   tcp   FIN  0.072974    4238   \n",
-              "\n",
-              "         dbytes  sttl  ...  ct_ftp_cmd  ct_srv_src  ct_srv_dst ct_dst_ltm  \\\n",
-              "0           164    31  ...           0           3           7          1   \n",
-              "1           304    31  ...           0           2           4          2   \n",
-              "2           178    31  ...           0          12           8          1   \n",
-              "3           164    31  ...           0           6           9          1   \n",
-              "4           178    31  ...           0           7           9          1   \n",
-              "...         ...   ...  ...         ...         ...         ...        ...   \n",
-              "699996     1874    31  ...           0           8          20          7   \n",
-              "699997  1087890    31  ...           0           1           1          2   \n",
-              "699998     2464    31  ...           0          13          13          6   \n",
-              "699999      304    31  ...           0          10          13          6   \n",
-              "700000    60788    31  ...           0          13          13          6   \n",
-              "\n",
-              "        ct_src_ ltm  ct_src_dport_ltm  ct_dst_sport_ltm  ct_dst_src_ltm  \\\n",
-              "0                 3                 1                 1               1   \n",
-              "1                 3                 1                 1               2   \n",
-              "2                 2                 2                 1               1   \n",
-              "3                 1                 1                 1               1   \n",
-              "4                 1                 1                 1               1   \n",
-              "...             ...               ...               ...             ...   \n",
-              "699996            5                 1                 1               4   \n",
-              "699997            7                 2                 2               2   \n",
-              "699998            7                 2                 1               2   \n",
-              "699999            5                 1                 1               3   \n",
-              "700000            7                 1                 1               2   \n",
-              "\n",
-              "        attack_cat  Label  \n",
-              "0              NaN      0  \n",
-              "1              NaN      0  \n",
-              "2              NaN      0  \n",
-              "3              NaN      0  \n",
-              "4              NaN      0  \n",
-              "...            ...    ...  \n",
-              "699996         NaN      0  \n",
-              "699997         NaN      0  \n",
-              "699998         NaN      0  \n",
-              "699999         NaN      0  \n",
-              "700000         NaN      0  \n",
-              "\n",
-              "[700001 rows x 49 columns]"
-            ]
-          },
-          "execution_count": 19,
-          "metadata": {},
-          "output_type": "execute_result"
         }
       ],
       "source": [
