--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -2416,7 +2416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deep Learning Models"
+    "## Baseline ML Models"
    ]
   },
   {
@@ -2562,174 +2562,6 @@
    "source": [
     "#Linear equation formed by PCA\n",
     "print(pca.components_)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Ignore old"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3621\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3620\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx:136\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx:163\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:2131\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:2140\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.Int64HashTable.get_item\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: 0",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [18]\u001b[0m, in \u001b[0;36m<cell line: 28>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     27\u001b[0m nodes \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(dfsample)):\n\u001b[1;32m---> 29\u001b[0m     nodes\u001b[38;5;241m.\u001b[39madd(\u001b[38;5;28mstr\u001b[39m(\u001b[43mdfsample\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43msrcip\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(dfsample[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msport\u001b[39m\u001b[38;5;124m'\u001b[39m][i]))\n\u001b[0;32m     30\u001b[0m     nodes\u001b[38;5;241m.\u001b[39madd(\u001b[38;5;28mstr\u001b[39m(dfsample[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdstip\u001b[39m\u001b[38;5;124m'\u001b[39m][i])\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m:\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(dfsample[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdsport\u001b[39m\u001b[38;5;124m'\u001b[39m][i]))\n\u001b[0;32m     32\u001b[0m \u001b[38;5;66;03m#prepare an adjacency matrix of the nodes\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\series.py:958\u001b[0m, in \u001b[0;36mSeries.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    955\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[key]\n\u001b[0;32m    957\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m key_is_scalar:\n\u001b[1;32m--> 958\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_value\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    960\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_hashable(key):\n\u001b[0;32m    961\u001b[0m     \u001b[38;5;66;03m# Otherwise index.get_value will raise InvalidIndexError\u001b[39;00m\n\u001b[0;32m    962\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m    963\u001b[0m         \u001b[38;5;66;03m# For labels that don't resolve as scalars like tuples and frozensets\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\series.py:1069\u001b[0m, in \u001b[0;36mSeries._get_value\u001b[1;34m(self, label, takeable)\u001b[0m\n\u001b[0;32m   1066\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_values[label]\n\u001b[0;32m   1068\u001b[0m \u001b[38;5;66;03m# Similar to Index.get_value, but we do not fall back to positional\u001b[39;00m\n\u001b[1;32m-> 1069\u001b[0m loc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mindex\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1070\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39m_get_values_for_loc(\u001b[38;5;28mself\u001b[39m, loc, label)\n",
-      "File \u001b[1;32mc:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3623\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3621\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3622\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m-> 3623\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3624\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3625\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3626\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3627\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3628\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[1;31mKeyError\u001b[0m: 0"
-     ]
-    }
-   ],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
-    "import numpy as np\n",
-    "\n",
-    "# Define LSTM classifier\n",
-    "class LSTMClassifier(nn.Module):\n",
-    "    def __init__(self, input_size, hidden_size, output_size):\n",
-    "        super(LSTMClassifier, self).__init__()\n",
-    "        self.hidden_size = hidden_size\n",
-    "        self.lstm = nn.LSTM(input_size, hidden_size)\n",
-    "        self.fc = nn.Linear(hidden_size, output_size)\n",
-    "        self.sigmoid = nn.Sigmoid()\n",
-    "\n",
-    "    def forward(self, input_seq):\n",
-    "        lstm_out, _ = self.lstm(input_seq)\n",
-    "        output = self.fc(lstm_out[-1])  # Taking the last output of the sequence\n",
-    "        output = self.sigmoid(output)\n",
-    "        return output\n",
-    "\n",
-    "# Prepare data (sample data)\n",
-    "# Replace this part with your actual data loading and preprocessing\n",
-    "\n",
-    "#Sample 1% of the dataset\n",
-    "dfsample = df.sample(frac=0.1, random_state=42)\n",
-    "\n",
-    "nodes = set()\n",
-    "for i in range(len(dfsample)):\n",
-    "    nodes.add(str(dfsample['srcip'][i])+':'+str(dfsample['sport'][i]))\n",
-    "    nodes.add(str(dfsample['dstip'][i])+':'+str(dfsample['dsport'][i]))\n",
-    "\n",
-    "#prepare an adjacency matrix of the nodes\n",
-    "adjacency_matrix = np.zeros((len(nodes), len(nodes)))\n",
-    "label_matrix = np.zeros((len(nodes), len(nodes)))\n",
-    "adjacency_matrix = torch.tensor(adjacency_matrix, dtype=torch.float32)\n",
-    "label_matrix = torch.tensor(label_matrix, dtype=torch.float32)\n",
-    "#Add the columns srcip:sport and dstip:dsport to the adjacency matrix\n",
-    "for i in range(len(dfsample)):\n",
-    "    src = str(dfsample['srcip'][i])+':'+str(dfsample['sport'][i])\n",
-    "    dst = str(dfsample['dstip'][i])+':'+str(dfsample['dsport'][i])\n",
-    "    adjacency_matrix[nodes.index(src), nodes.index(dst)] = (dfsample['sttl'][i], df['ct_state_ttl'][i])\n",
-    "    label_matrix[nodes.index(src), nodes.index(dst)] = dfsample['Label'][i]\n",
-    "\n",
-    "#get the unique \n",
-    "# Assuming adjacency matrix is already prepared\n",
-    "# adjacency_matrix = torch.tensor([[(0.1, 0.2), (), (0.3, 0.4)],\n",
-    "#                                   [(), (0.5, 0.6), ()],\n",
-    "#                                   [(), (), (0.7, 0.8)]], dtype=torch.float32)\n",
-    "\n",
-    "# # Assuming labels are already prepared as adjacency matrix with 0s and 1s\n",
-    "# labels = torch.tensor([[0, 1, 0],\n",
-    "#                         [1, 0, 1],\n",
-    "#                         [0, 1, 0]], dtype=torch.float32)\n",
-    "\n",
-    "# Hyperparameters\n",
-    "input_size = 2  # Assuming each tuple has 2 attributes\n",
-    "hidden_size = 16\n",
-    "output_size = 1  # Binary classification\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Initialize model, optimizer, and loss function\n",
-    "model = LSTMClassifier(input_size, hidden_size, output_size)\n",
-    "optimizer = optim.Adam(model.parameters())\n",
-    "criterion = nn.BCELoss()\n",
-    "\n",
-    "# Training loop\n",
-    "num_epochs = 100\n",
-    "for epoch in range(num_epochs):\n",
-    "    model.train()\n",
-    "    optimizer.zero_grad()\n",
-    "    outputs = model(adjacency_matrix)\n",
-    "    loss = criterion(outputs.squeeze(), label_matrix.view(-1))  # Flattening labels for BCELoss\n",
-    "    loss.backward()\n",
-    "    optimizer.step()\n",
-    "\n",
-    "    if (epoch+1) % 10 == 0:\n",
-    "        print(f'Epoch [{epoch+1}/{num_epochs}], Loss: {loss.item()}')\n",
-    "\n",
-    "# Evaluation (you can also do this on a separate validation set)\n",
-    "model.eval()\n",
-    "with torch.no_grad():\n",
-    "    predictions = (model(adjacency_matrix).squeeze() > 0.5).float()\n",
-    "    accuracy = torch.mean((predictions == label_matrix).float())\n",
-    "    print(f'Accuracy: {accuracy.item()}')\n",
-    "\n",
-    "    # Calculate F1 score\n",
-    "    from sklearn.metrics import f1_score\n",
-    "    f1 = f1_score(label_matrix.view(-1).numpy(), predictions.numpy())\n",
-    "    print(f'F1 Score: {f1}')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'59.166.0.6'"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfsample['srcip'].iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pandas.core.indexing._iLocIndexer at 0x13482d2bef0>"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dfsample['srcip'].iloc(0)"
    ]
   },
   {
@@ -3092,7 +2924,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ignore"
+    "2. LSTM for STTL & CT_STATE_TTL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Sample 1% of the dataset\n",
+    "dfsample = df.sample(frac=0.01, random_state=42)\n",
+    "\n",
+    "nodes = set()\n",
+    "for i in range(len(dfsample)):\n",
+    "    src = str(dfsample['srcip'].iloc[i])+':'+str(dfsample['sport'].iloc[i])\n",
+    "    dst = str(dfsample['dstip'].iloc[i])+':'+str(dfsample['dsport'].iloc[i])\n",
+    "    nodes.add(src)\n",
+    "    nodes.add(dst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ignore (Was supposed to be for GCN)"
    ]
   },
   {
