--- a/Phase2.ipynb
+++ b/Phase2.ipynb
@@ -1980,7 +1980,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_17364\\3370251438.py:1: DtypeWarning: Columns (1,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_6092\\3370251438.py:1: DtypeWarning: Columns (1,3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(r'D:\\Project Phase II\\Dataset\\phase2labelencodeddataset.csv',encoding='cp1252')\n"
      ]
     }
@@ -2562,6 +2562,356 @@
    "source": [
     "#Linear equation formed by PCA\n",
     "print(pca.components_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Find Prediction Values of Baseline ML Models Alone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43005"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Find all string values in sport\n",
+    "df['sport'] = df['sport'].astype(str)\n",
+    "#Replace '-' with 0\n",
+    "df['sport'] = df['sport'].replace('-', '80')\n",
+    "#COnvert hexadecimal values to decimal in sport\n",
+    "df['sport'] = df['sport'].apply(lambda x: int(x, 16))\n",
+    "#Convert sport to int\n",
+    "df['sport'] = df['sport'].astype(int)\n",
+    "\n",
+    "len(df['sport'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "64380"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['dsport'] = df['dsport'].astype(str)\n",
+    "df['dsport'] = df['dsport'].replace('-', '80')\n",
+    "df['dsport'] = df['dsport'].apply(lambda x: int(x, 16))\n",
+    "df['dsport'] = df['dsport'].astype(int)\n",
+    "len(df['dsport'].unique())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfSample0 = df[df['Label'] == 0].sample(n=250000, random_state=42)\n",
+    "dfSample1 = df[df['Label'] == 1].sample(n=250000, random_state=42)\n",
+    "\n",
+    "dfSample = pd.concat([dfSample0, dfSample1])\n",
+    "dfSample = dfSample.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "#Split the dataset into features and labels\n",
+    "XSample = dfSample.drop('Label', axis=1)\n",
+    "ySample = dfSample['Label']\n",
+    "\n",
+    "#Split the dataset into training and testing sets\n",
+    "XSample_train, XSample_test, ySample_train, ySample_test = train_test_split(XSample, ySample, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sathi\\AppData\\Local\\Temp\\ipykernel_6092\\3350324575.py:3: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  dfDroppedforLR = dfDroppedforLR.append(df[df['Label'] == 1].sample(n=250000, random_state=40))\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Take equal number of samples for each label\n",
+    "dfDroppedforLR = df[df['Label'] == 0].sample(n=250000, random_state=40)\n",
+    "dfDroppedforLR = dfDroppedforLR.append(df[df['Label'] == 1].sample(n=250000, random_state=40))\n",
+    "\n",
+    "#Drop srcip and dstip and use a new df\n",
+    "dfDroppedforLR = dfDroppedforLR.drop(['srcip', 'dstip','attack_cat','Stime','Ltime'], axis=1)\n",
+    "\n",
+    "#Shuffle the dataset\n",
+    "dfDroppedforLR = dfDroppedforLR.sample(frac=1).reset_index(drop=True)\n",
+    "\n",
+    "#Split the dataset into features and labels\n",
+    "X = dfDroppedforLR.iloc[:,0:42]\n",
+    "y = dfDroppedforLR['Label']\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.87      0.89     49914\n",
+      "           1       0.88      0.92      0.90     50086\n",
+      "\n",
+      "    accuracy                           0.90    100000\n",
+      "   macro avg       0.90      0.90      0.90    100000\n",
+      "weighted avg       0.90      0.90      0.90    100000\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Logistic regression to classify using all variables\n",
+    "lr = LogisticRegression()\n",
+    "lr.fit(X_train, y_train)\n",
+    "y_pred = lr.predict(X_test)\n",
+    "print(classification_report(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SVC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#SVC\n",
+    "svc = SVC()\n",
+    "svc.fit(X_train, y_train)\n",
+    "y_pred = svc.predict(X_test)\n",
+    "print(classification_report(y_test,y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lazy Predict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Use lazypredict \n",
+    "from lazypredict.Supervised import LazyClassifier\n",
+    "#Remove time consuming lazypredict classifier models from training\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list all classifier names in lazypredict and remove unwanted ones\n",
+    "LazyClassifier().models\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# List of classifiers to include\n",
+    "import sklearn\n",
+    "import xgboost\n",
+    "import lightgbm\n",
+    "\n",
+    "classifiers = [\n",
+    " ('AdaBoostClassifier', sklearn.ensemble._weight_boosting.AdaBoostClassifier),\n",
+    " ('BaggingClassifier', sklearn.ensemble._bagging.BaggingClassifier),\n",
+    " ('BernoulliNB', sklearn.naive_bayes.BernoulliNB),\n",
+    " ('CategoricalNB', sklearn.naive_bayes.CategoricalNB),\n",
+    " ('DecisionTreeClassifier', sklearn.tree._classes.DecisionTreeClassifier),\n",
+    " ('DummyClassifier', sklearn.dummy.DummyClassifier),\n",
+    " ('GaussianNB', sklearn.naive_bayes.GaussianNB),\n",
+    " ('KNeighborsClassifier',  sklearn.neighbors._classification.KNeighborsClassifier),\n",
+    " ('LinearDiscriminantAnalysis',  sklearn.discriminant_analysis.LinearDiscriminantAnalysis),\n",
+    " ('LinearSVC', sklearn.svm._classes.LinearSVC),\n",
+    " ('LogisticRegression', sklearn.linear_model._logistic.LogisticRegression),\n",
+    " ('NuSVC', sklearn.svm._classes.NuSVC),\n",
+    " ('PassiveAggressiveClassifier',  sklearn.linear_model._passive_aggressive.PassiveAggressiveClassifier),\n",
+    " ('Perceptron', sklearn.linear_model._perceptron.Perceptron),\n",
+    " ('QuadraticDiscriminantAnalysis',  sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis),\n",
+    " ('RandomForestClassifier', sklearn.ensemble._forest.RandomForestClassifier),\n",
+    " ('RidgeClassifier', sklearn.linear_model._ridge.RidgeClassifier),\n",
+    " ('RidgeClassifierCV', sklearn.linear_model._ridge.RidgeClassifierCV),\n",
+    " ('SGDClassifier', sklearn.linear_model._stochastic_gradient.SGDClassifier),\n",
+    " ('SVC', sklearn.svm._classes.SVC),\n",
+    " ('StackingClassifier', sklearn.ensemble._stacking.StackingClassifier),\n",
+    " ('XGBClassifier', xgboost.sklearn.XGBClassifier),\n",
+    " ('LGBMClassifier', lightgbm.sklearn.LGBMClassifier)]\n",
+    "clf = LazyClassifier(verbose=0,ignore_warnings=True, custom_metric=None,classifiers=classifiers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('AdaBoostClassifier', sklearn.ensemble._weight_boosting.AdaBoostClassifier),\n",
+       " ('BaggingClassifier', sklearn.ensemble._bagging.BaggingClassifier),\n",
+       " ('BernoulliNB', sklearn.naive_bayes.BernoulliNB),\n",
+       " ('CalibratedClassifierCV', sklearn.calibration.CalibratedClassifierCV),\n",
+       " ('CategoricalNB', sklearn.naive_bayes.CategoricalNB),\n",
+       " ('DecisionTreeClassifier', sklearn.tree._classes.DecisionTreeClassifier),\n",
+       " ('DummyClassifier', sklearn.dummy.DummyClassifier),\n",
+       " ('ExtraTreeClassifier', sklearn.tree._classes.ExtraTreeClassifier),\n",
+       " ('ExtraTreesClassifier', sklearn.ensemble._forest.ExtraTreesClassifier),\n",
+       " ('GaussianNB', sklearn.naive_bayes.GaussianNB),\n",
+       " ('KNeighborsClassifier',\n",
+       "  sklearn.neighbors._classification.KNeighborsClassifier),\n",
+       " ('LabelPropagation',\n",
+       "  sklearn.semi_supervised._label_propagation.LabelPropagation),\n",
+       " ('LabelSpreading', sklearn.semi_supervised._label_propagation.LabelSpreading),\n",
+       " ('LinearDiscriminantAnalysis',\n",
+       "  sklearn.discriminant_analysis.LinearDiscriminantAnalysis),\n",
+       " ('LinearSVC', sklearn.svm._classes.LinearSVC),\n",
+       " ('LogisticRegression', sklearn.linear_model._logistic.LogisticRegression),\n",
+       " ('NearestCentroid', sklearn.neighbors._nearest_centroid.NearestCentroid),\n",
+       " ('NuSVC', sklearn.svm._classes.NuSVC),\n",
+       " ('PassiveAggressiveClassifier',\n",
+       "  sklearn.linear_model._passive_aggressive.PassiveAggressiveClassifier),\n",
+       " ('Perceptron', sklearn.linear_model._perceptron.Perceptron),\n",
+       " ('QuadraticDiscriminantAnalysis',\n",
+       "  sklearn.discriminant_analysis.QuadraticDiscriminantAnalysis),\n",
+       " ('RandomForestClassifier', sklearn.ensemble._forest.RandomForestClassifier),\n",
+       " ('RidgeClassifier', sklearn.linear_model._ridge.RidgeClassifier),\n",
+       " ('RidgeClassifierCV', sklearn.linear_model._ridge.RidgeClassifierCV),\n",
+       " ('SGDClassifier', sklearn.linear_model._stochastic_gradient.SGDClassifier),\n",
+       " ('SVC', sklearn.svm._classes.SVC),\n",
+       " ('StackingClassifier', sklearn.ensemble._stacking.StackingClassifier),\n",
+       " ('XGBClassifier', xgboost.sklearn.XGBClassifier),\n",
+       " ('LGBMClassifier', lightgbm.sklearn.LGBMClassifier)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from lazypredict import Supervised\n",
+    "Supervised.CLASSIFIERS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'tuple' object has no attribute '__name__'\n",
+      "Invalid Classifier(s)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 48%|████▊     | 11/23 [35:49<45:40, 228.36s/it]  "
+     ]
+    }
+   ],
+   "source": [
+    "models,predictions = clf.fit(X_train, X_test, y_train, y_test)\n",
+    "models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'models' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [13]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Classification report for lazypredict models\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m \u001b[43mmodels\u001b[49m:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(model)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(classification_report(y_test, predictions[model]))\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'models' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "#Classification report for lazypredict models\n",
+    "for model in models:\n",
+    "    print(model)\n",
+    "    print(classification_report(y_test, predictions[model]))\n",
+    "    print('-----------------------------------------------------------------------------------')"
    ]
   },
   {
